--- a/css/resume.css
+++ b/css/resume.css
@@ -176,15 +176,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color:black !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: black !important;
 }
 
 a {
-  color: #BD5D38;
+  color: black;
 }
 
 a:hover, a:focus, a:active {
